{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "a929498e-fccb-4fb5-8ba7-70ff50f1b80f",
            "actions": [
                {
                    "name": "Attack2",
                    "type": "Button",
                    "id": "ef025afb-6235-4d6c-b79e-209d07423c1f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack3",
                    "type": "Button",
                    "id": "d8d40c93-0ae2-42b9-be76-c09e37c76eec",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack1",
                    "type": "Button",
                    "id": "b21d75b2-e035-4673-a62f-5ab11c407c2b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "c6b4b847-7442-42ac-a2af-89347ff1a8c6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fba404a4-6ffd-4b38-abef-5437e591b8c9",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6b9532f-1328-45b3-ae50-117bebf0f388",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04a02f21-6c0b-466b-be61-f612c067ebbc",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "dbe0d8e5-9acf-4590-8c1c-40025ccdecc1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "93aa58d5-7d1e-4c5a-9935-b5526c12c97c",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "83753a5b-5ce9-4bcc-872e-8ac8d7f359fd",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5c1e4b95-b83c-4cb6-9531-9b62854aff93",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a0b3f871-8ea0-47f7-a2ac-ddefa78d796f",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "f50cd89e-663b-4588-a71b-3cf2bbb552fe",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1433b1c8-352c-4b64-98e4-dbcc5d678355",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "538032de-0a70-4108-b60a-cd3dca3d2d86",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5a50780b-68f2-4b63-a38f-b751d8bc62b4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a6abbcb3-2f86-4d02-bb70-7a73c2cef674",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button With Two Modifiers",
                    "id": "13dd3186-a713-4f60-bf52-818417843646",
                    "path": "ButtonWithTwoModifiers",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Attack3",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "8770bd41-9f35-4fc4-ae80-7748d73392d0",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Attack3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "1fd2c80a-e8ab-438c-a520-306453e0d23b",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Attack3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "56f509ad-7f32-45b7-9a20-37b4472d358a",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Attack3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "63300420-248a-46bf-b89f-0554a6ba1b3f",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Attack2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button With One Modifier",
                    "id": "d24a38b4-2921-46fe-91a0-605fd3842cd3",
                    "path": "ButtonWithOneModifier",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Attack2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "75ae0cca-bc82-4b0a-93bf-5012e4cc80c9",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Attack2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "a7162099-2304-4f3b-b912-f232ec9df474",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Attack2",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and mouse",
            "bindingGroup": "Keyboard and mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}